# payrail

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  deny.toml  gitleaks.toml
.github/: release.yml
.github/workflows/: ci.yml  release.yml  scheduled-security.yml  yank-internal-crates.yml
crates/payrail/: Cargo.toml  README.md
crates/payrail-core/: Cargo.toml  README.md
crates/payrail-core/src/: connector.rs  country.rs  currency.rs  customer.rs  error.rs  lib.rs  next_action.rs  payment.rs  reference.rs  refund.rs  status.rs  webhook.rs
crates/payrail-lipila/: Cargo.toml  README.md
crates/payrail-lipila/src/: callback.rs  client.rs  collection.rs  config.rs  lib.rs  mapper.rs  models.rs  webhook.rs
crates/payrail-lipila/tests/: mock_backend.rs
crates/payrail-mobile-money/: Cargo.toml  README.md
crates/payrail-mobile-money/src/: gateway.rs  lib.rs  operator.rs  phone.rs
crates/payrail-paypal/: Cargo.toml  README.md
crates/payrail-paypal/src/: auth.rs  client.rs  config.rs  lib.rs  mapper.rs  orders.rs  webhook.rs
crates/payrail-paypal/tests/: mock_backend.rs
crates/payrail-stripe/: Cargo.toml  README.md
crates/payrail-stripe/src/: client.rs  config.rs  lib.rs  mapper.rs  webhook.rs
crates/payrail-stripe/tests/: mock_backend.rs
crates/payrail/benches/: router_dispatch.rs
crates/payrail/examples/: fraud_mock_provider.rs  lipila_mobile_money.rs  opentelemetry_metrics.rs  paypal_order.rs  stripe_checkout.rs  stripe_embedded_checkout.rs  stripe_stablecoin_checkout.rs  webhook_axum.rs
crates/payrail/src/: builder.rs  client.rs  lib.rs  router.rs
crates/payrail/src/core/: amount.rs  checkout.rs  config.rs  country.rs  currency.rs  error.rs  events.rs  idempotency.rs  mod.rs  money.rs  next_action.rs  payment.rs  payment_method.rs  phone.rs  provider.rs  reference.rs  refund.rs  webhook.rs
crates/payrail/src/core/fraud/: assessment.rs  context.rs  decision.rs  event.rs  mod.rs  policy.rs  provider.rs  reason.rs  review.rs  score.rs  session.rs  verification.rs
crates/payrail/src/core/telemetry/: contract.rs  emit.rs  field.rs  metric.rs  mod.rs  operation.rs  otel.rs  value.rs
crates/payrail/src/providers/: mod.rs
crates/payrail/src/providers/lipila/: callback.rs  client.rs  collection.rs  config.rs  mapper.rs  mod.rs  models.rs  webhook.rs
crates/payrail/src/providers/mobile_money/: gateway.rs  mod.rs  operator.rs  phone.rs
crates/payrail/src/providers/paypal/: auth.rs  client.rs  config.rs  mapper.rs  mod.rs  models.rs  orders.rs  webhook.rs
crates/payrail/src/providers/stripe/: client.rs  config.rs  mapper.rs  mod.rs  models.rs  webhook.rs
crates/payrail/tests/: fraud_mock_provider.rs  lipila_mock_backend.rs  paypal_mock_backend.rs  stripe_mock_backend.rs
docs/: provider-extension-template.md  release-checklist.md  security-review.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: core_validation.rs  lipila_webhook.rs  stripe_webhook.rs
