[workspace]
members = [
    "crates/payrail",
    "crates/payrail-core",
    "crates/payrail-lipila",
    "crates/payrail-mobile-money",
    "crates/payrail-paypal",
    "crates/payrail-stripe",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/boniface/payrail"
homepage = "https://github.com/boniface/payrail"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
hmac = "0.12"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
wiremock = "0.6"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
