[workspace]
members = [
    "crates/payrail",
]
resolver = "2"

[workspace.package]
version = "0.1.5"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/boniface/payrail"
homepage = "https://github.com/boniface/payrail"

[workspace.dependencies]
axum = "0.8"
base64 = "0.22"
hmac = "0.13"
http = "1.4"
reqwest = { version = "0.13", default-features = false, features = ["form", "json"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
subtle = "2.6"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.52", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
wiremock = "0.6"
criterion = "0.8"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
