[package]
name = "payrail-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Provider-neutral payment abstractions for PayRail"
documentation = "https://docs.rs/payrail-core"
readme = "README.md"
keywords = ["payments", "checkout", "webhooks", "stripe", "paypal"]
categories = ["api-bindings", "web-programming"]

[dependencies]
async-trait.workspace = true
http.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
