[package]
name = "payrail-stripe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Stripe connector for PayRail"
documentation = "https://docs.rs/payrail-stripe"
readme = "README.md"
keywords = ["payments", "stripe", "checkout", "webhooks"]
categories = ["api-bindings", "web-programming"]

[dependencies]
async-trait.workspace = true
hmac.workspace = true
payrail-core = { path = "../payrail-core", version = "0.1.0" }
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
time.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
http.workspace = true
tokio.workspace = true
wiremock.workspace = true
