[package]
name = "payrail"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Provider-neutral Rust payments facade for Stripe, PayPal, and Mobile Money"
documentation = "https://docs.rs/payrail"
readme = "README.md"
keywords = ["payments", "stripe", "paypal", "mobile-money", "checkout"]
categories = ["api-bindings", "web-programming"]

[package.metadata.cargo-machete]
ignored = ["reqwest"]

[features]
default = ["rustls"]
stripe = [
    "dep:hmac",
    "dep:secrecy",
    "dep:serde",
    "dep:sha2",
    "dep:subtle",
    "dep:time",
    "dep:tracing",
]
paypal = [
    "dep:secrecy",
    "dep:serde",
    "dep:time",
    "dep:tokio",
    "dep:tracing",
]
lipila = [
    "mobile-money",
    "dep:base64",
    "dep:hmac",
    "dep:secrecy",
    "dep:serde",
    "dep:sha2",
    "dep:subtle",
    "dep:time",
    "dep:tracing",
]
mobile-money = []
all-providers = ["stripe", "paypal", "lipila", "mobile-money"]
rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
base64 = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
http.workspace = true
reqwest.workspace = true
secrecy = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json.workspace = true
sha2 = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }
thiserror.workspace = true
time = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
url.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
criterion.workspace = true
secrecy.workspace = true
tokio.workspace = true
wiremock.workspace = true

[[bench]]
name = "router_dispatch"
harness = false

[[example]]
name = "lipila_mobile_money"
required-features = ["lipila"]

[[example]]
name = "paypal_order"
required-features = ["paypal"]

[[example]]
name = "stripe_checkout"
required-features = ["stripe"]

[[example]]
name = "stripe_embedded_checkout"
required-features = ["stripe"]

[[example]]
name = "stripe_stablecoin_checkout"
required-features = ["stripe"]

[[example]]
name = "webhook_axum"
required-features = ["lipila"]
